@@ -4,12 +4,7 @@ import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -18,9 +13,13 @@ import com.google.re2j.Matcher;
 import com.google.re2j.Pattern;
 
 import io.github.contractautomataproject.catlib.automaton.Automaton;
+import io.github.contractautomataproject.catlib.automaton.label.CALabel;
 import io.github.contractautomataproject.catlib.automaton.label.CMLabel;
 import io.github.contractautomataproject.catlib.automaton.label.Label;
 import io.github.contractautomataproject.catlib.automaton.label.action.Action;
+import io.github.contractautomataproject.catlib.automaton.label.action.IdleAction;
+import io.github.contractautomataproject.catlib.automaton.label.action.OfferAction;
+import io.github.contractautomataproject.catlib.automaton.label.action.RequestAction;
 import io.github.contractautomataproject.catlib.automaton.state.BasicState;
 import io.github.contractautomataproject.catlib.automaton.state.State;
 import io.github.contractautomataproject.catlib.automaton.transition.ModalTransition;
@@ -29,19 +28,20 @@ import javax.xml.parsers.ParserConfigurationException;
 
 /**
  * Import/Export textual DATA format
- * 
+ *
  * @author Davide Basile
  *
  */
 public class AutDataConverter<L extends Label<Action>>  implements AutConverter<Automaton<String,Action,State<String>,ModalTransition<String, Action,State<String>,L>>,Automaton<?,?,?,?>> {
-	private final Function<List<String>,L> createLabel;
+	private final Function<List<Action>,L> createLabel;
 	private static final String SUFFIX = ".data";
 	private static final String EMPTYMSG = "Empty file name";
 
-	public AutDataConverter(Function<List<String>, L> createLabel) {
+	public AutDataConverter(Function<List<Action>, L> createLabel) {
 		super();
 		this.createLabel = createLabel;
 	}
+
 
 	public Automaton<String,Action,State<String>,ModalTransition<String,Action,State<String>,L>> importMSCA(String filename) throws IOException {
 		if (!filename.endsWith(SUFFIX))
@@ -63,62 +63,62 @@ public class AutDataConverter<L extends Label<Action>>  implements AutConverter<
 			Map<Integer,Set<BasicState<String>>> mapBasicStates = new HashMap<>();
 
 			String strLine;
-			while ((strLine = br.readLine()) != null)   
+			while ((strLine = br.readLine()) != null)
 			{
 				if (strLine.length()>0)
 				{
 					String subStrLine=strLine.substring(0,1);
 					switch(subStrLine)
 					{
-					case "R":  //Rank Line
-					{
-						rank = Integer.parseInt(strLine.substring(6));
-						break;
-					}
-					case "I": //Initial state
-					{
-						initial=Arrays.stream(strLine.split("[\\[\\],]"))
-								.filter(s->!s.contains("Initial state"))
-								.map(String::trim)
-								.toArray(String[]::new);
-						if (initial.length!=rank)
-							throw new IllegalArgumentException("Initial state with different rank");
-						break;
-					}
-					case "F": //Final state
-					{
-						fin=Arrays.stream(strLine.split("]"))
-								.map(sar->Arrays.stream(sar.split("[,|\\[]"))
-										.filter(s->!s.contains("Final states"))
-										.map(String::trim)
-										.filter(s->!s.isEmpty())
-										.toArray(String[]::new))
-								.toArray(String[][]::new);
-						if (fin.length!=rank)
-							throw new IllegalArgumentException("Final states with different rank");
+						case "R":  //Rank Line
+						{
+							rank = Integer.parseInt(strLine.substring(6));
+							break;
+						}
+						case "I": //Initial state
+						{
+							initial=Arrays.stream(strLine.split("[\\[\\],]"))
+									.filter(s->!s.contains("Initial state"))
+									.map(String::trim)
+									.toArray(String[]::new);
+							if (initial.length!=rank)
+								throw new IllegalArgumentException("Initial state with different rank");
+							break;
+						}
+						case "F": //Final state
+						{
+							fin=Arrays.stream(strLine.split("]"))
+									.map(sar->Arrays.stream(sar.split("[,|\\[]"))
+											.filter(s->!s.contains("Final states"))
+											.map(String::trim)
+											.filter(s->!s.isEmpty())
+											.toArray(String[]::new))
+									.toArray(String[][]::new);
+							if (fin.length!=rank)
+								throw new IllegalArgumentException("Final states with different rank");
 
-						break;
-					}
-					case "(": //a may transition
-					{
-						tr.add(loadTransition(strLine,rank, ModalTransition.Modality.PERMITTED, states,mapBasicStates,initial,fin));
-						break;
-					}
-					case "!": //a must transition
-					{
-						String stype= strLine.substring(1,2);
-						ModalTransition.Modality type;
-						if ("U".equals(stype))
-							type=ModalTransition.Modality.URGENT;
-						else if ("L".equals(stype))
-							type=ModalTransition.Modality.LAZY;
-						else
-							throw new IllegalArgumentException("Invalid modality");
+							break;
+						}
+						case "(": //a may transition
+						{
+							tr.add(loadTransition(strLine,rank, ModalTransition.Modality.PERMITTED, states,mapBasicStates,initial,fin));
+							break;
+						}
+						case "!": //a must transition
+						{
+							String stype= strLine.substring(1,2);
+							ModalTransition.Modality type;
+							if ("U".equals(stype))
+								type=ModalTransition.Modality.URGENT;
+							else if ("L".equals(stype))
+								type=ModalTransition.Modality.LAZY;
+							else
+								throw new IllegalArgumentException("Invalid modality");
 
-						tr.add(loadTransition(strLine,rank,type,states,mapBasicStates,initial,fin));
-						break;
-					}
-					default : 
+							tr.add(loadTransition(strLine,rank,type,states,mapBasicStates,initial,fin));
+							break;
+						}
+						default :
 					}
 				}
 			}
@@ -146,49 +146,66 @@ public class AutDataConverter<L extends Label<Action>>  implements AutConverter<
 
 		State<String> source = createOrLoadState(states,mapBasicStates,tr[0],initial, fin);//source
 		State<String> target = createOrLoadState(states,mapBasicStates,tr[2],initial, fin);//target
-		return new ModalTransition<>(source,createLabel(tr),target,type); 
+		return new ModalTransition<>(source,createLabel(tr),target,type);
 	}
 
 	public L createLabel(String[][] tr) {
-		if (tr[1].length==1 && tr[1][0].contains(CMLabel.ACTION_SEPARATOR))
-			return createLabel.apply(List.of(tr[1][0]));
-		else 
-			return createLabel.apply(Arrays.asList(tr[1]));
+		if (tr[1].length==1 && CMLabel.isParsableCMLabel(tr[1][0]))
+			return createLabel.apply(List.of(new Action(tr[1][0])));
+
+		if (Arrays.stream(tr[1])
+				.allMatch(a->OfferAction.isOffer(a)
+						|| RequestAction.isRequest(a)
+						|| IdleAction.isIdle(a)))
+			return createLabel.apply(Arrays.stream(tr[1]).map(AutDataConverter::parseAction).collect(Collectors.toList()));
+		else
+			return createLabel.apply(Arrays.stream(tr[1]).map(Action::new).collect(Collectors.toList()));
+	}
+
+	public static Action parseAction(String action) {
+		Objects.requireNonNull(action);
+		if (OfferAction.isOffer(action))
+			return OfferAction.parseAction(action);
+		else if (RequestAction.isRequest(action))
+			return RequestAction.parseAction(action);
+		else if (IdleAction.isIdle(action))
+			return IdleAction.parseAction(action);
+		else throw new IllegalArgumentException();
 	}
 
 	private State<String> createOrLoadState(Set<State<String>> states,Map<Integer,Set<BasicState<String>>> mapBasicStates, String[] state,String[] initial, String[][] fin)  {
 
 		return states.stream()
 				.filter(cs->IntStream.range(0, cs.getState().size())
-						.allMatch(i->cs.getState().get(i).getState().equals(state[i]))) 
+						.allMatch(i->cs.getState().get(i).getState().equals(state[i])))
 				.findAny()
 				.orElseGet(()->{
 					State<String> temp= new State<>(
 							IntStream.range(0, state.length) //creating the list of basic states using mapBasicStates
-							.mapToObj(i->{
-								Set<BasicState<String>> l = mapBasicStates.get(i);
-								if (l==null || l.stream().noneMatch(bs-> bs.getState().equals(state[i])))
-								{
-									BasicState<String> bs=new BasicState<>(state[i]+"",
-											state[i].equals(initial[i]),
-											Arrays.stream(fin[i]).anyMatch(id->id.equals(state[i])));
-									if (l==null)
-										mapBasicStates.put(i, new HashSet<>(List.of(bs)));
-									else
-										l.add(bs);
-									return bs;
-								} else
-									return l.stream()
-											.filter(bs->bs.getState().equals(state[i]))
-											.findFirst()
-											.orElseThrow(RuntimeException::new);
-							}).collect(Collectors.toList())); 							
+									.mapToObj(i->{
+										Set<BasicState<String>> l = mapBasicStates.get(i);
+										if (l==null || l.stream().noneMatch(bs-> bs.getState().equals(state[i])))
+										{
+											BasicState<String> bs=new BasicState<>(state[i]+"",
+													state[i].equals(initial[i]),
+													Arrays.stream(fin[i]).anyMatch(id->id.equals(state[i])));
+											if (l==null)
+												mapBasicStates.put(i, new HashSet<>(List.of(bs)));
+											else
+												l.add(bs);
+											return bs;
+										} else
+											return l.stream()
+													.filter(bs->bs.getState().equals(state[i]))
+													.findFirst()
+													.orElseThrow(RuntimeException::new);
+									}).collect(Collectors.toList()));
 					states.add(temp); return temp;});
 	}
 
 	/**
 	 * Export the textual description of the automaton in a .data file
-	 * 
+	 *
 	 * @throws FileNotFoundException in case filename is not found
 	 */
 	@Override
